# pytestworkshop-pyconfr

./: .coveragerc  .gitignore  .travis.yml  Dockerfile  Pipfile  README.md  docker-compose.yml  manage.py  mkdocs.yml  setup.cfg
docs/: index.md
pycon/: urls.py  wsgi.py
pycon/config/: __init__.py  common.py  local.py
pycon/ftp/: views.py
requirements/: base.txt  dev.txt  test.txt
tests/: conftest.py  docker-compose.yml  test_file_list.py  test_happy_path.py  test_upload_file.py
vagrant/: Vagrantfile  provision.sh
