[metadata]
name = pycon

[flake8]
ignore = E226,E302,E41,E702,E731
max-line-length = 110
exclude = migrations

[mypy-pytest.*]
ignore_missing_imports=True

[mypy-django.conf.*]
ignore_missing_imports=True

[mypy-django.test.*]
ignore_missing_imports=True

[tool:pytest]
DJANGO_SETTINGS_MODULE=pycon.config
DJANGO_CONFIGURATION=Testing
